<resources>
    <string name="app_name">SSIC</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_units"> \%1$d\ units</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="middle_name">Middle name</string>
    <string name="address">Address</string>
    <string name="age">Age</string>


</resources>
